First attempt - derived from MUSHRA page, then abandoned.

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@ will be prosecuted to the maximum extent possible under law.
     <script src="lib/webmushra/misc/Shuffle.js"></script>
 
     <!-- pages -->
+    <script src="lib/webmushra/pages/BBCSpatialPage.js"></script>
     <script src="lib/webmushra/pages/BS1116Page.js"></script>
     <script src="lib/webmushra/pages/BS1116PageManager.js"></script>
     <script src="lib/webmushra/pages/FinishPage.js"></script>
