Updates to BBC Spatial page. Based on paired comparison, writing and storing az,dist,width.

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@ will be prosecuted to the maximum extent possible under law.
     <script src="lib/webmushra/datamodel/Session.js"></script>
     <script src="lib/webmushra/datamodel/Stimulus.js"></script>
     <script src="lib/webmushra/datamodel/Trial.js"></script>
+    <script src="lib/webmushra/datamodel/BBCSpatialRating.js"></script>
     <script src="lib/webmushra/datamodel/SpatialLocalizationRating.js"></script>
     <script src="lib/webmushra/datamodel/SpatialASWRating.js"></script>
     <script src="lib/webmushra/datamodel/SpatialHWDRating.js"></script>
@@ -105,6 +106,7 @@ will be prosecuted to the maximum extent possible under law.
 
     <!-- pages -->
     <script src="lib/webmushra/pages/BBCSpatialPage.js"></script>
+    <script src="lib/webmushra/pages/BBCSpatialPageManager.js"></script>
     <script src="lib/webmushra/pages/BS1116Page.js"></script>
     <script src="lib/webmushra/pages/BS1116PageManager.js"></script>
     <script src="lib/webmushra/pages/FinishPage.js"></script>
