Added familiarisation pages.

--- a/index.html
+++ b/index.html
@@ -120,6 +120,9 @@ will be prosecuted to the maximum extent possible under law.
     <script src="lib/webmushra/pages/LikertMultiStimulusPage.js"></script>
     <script src="lib/webmushra/pages/LikertComparisonPage.js"></script>
     <script src="lib/webmushra/pages/LikertComparisonPageManager.js"></script>
+    <script src="lib/webmushra/pages/MultipleStimulusFamiliarisationPage.js"></script>
+    <script src="lib/webmushra/pages/MultipleStimulusLikertFamiliarisationPage.js"></script>
+    <script src="lib/webmushra/pages/MultipleStimulusBBCSpatialFamiliarisationPage.js"></script>
     <script src="lib/webmushra/pages/SpatialPage.js"></script>
 
     <script src="lib/webmushra/nls/nls.js"></script>
