Added consent page and now storing participants in separate table with uniqueid to cross-reference.

--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@ will be prosecuted to the maximum extent possible under law.
     <script src="lib/webmushra/misc/Shuffle.js"></script>
 
     <!-- pages -->
+    <script src="lib/webmushra/pages/ConsentFormPage.js"></script>
     <script src="lib/webmushra/pages/BBCSpatialPage.js"></script>
     <script src="lib/webmushra/pages/BBCSpatialPageManager.js"></script>
     <script src="lib/webmushra/pages/BS1116Page.js"></script>
