Added BBC R&D logo to index. Removed bbcspatial config example.

--- a/index.html
+++ b/index.html
@@ -160,9 +160,12 @@ will be prosecuted to the maximum extent possible under law.
             /build -->
             by</strong></small>
         </td>
-        <td class="logo"><a href="https://www.audiolabs-erlangen.de/"><img src="design/images/alabs_new.png" class="logo"/></a></td>
-        <td class="logo"><a href="http://www.iis.fraunhofer.de/"><img src="design/images/iis.svg" class="logo" /></a></td>
-        <td class="logo"><a href="https://www.fau.eu/"><img src="design/images/techfak.svg" class="logo" /></a></td>
+        <td class="logo"><a href="https://www.audiolabs-erlangen.de/" target="_blank"><img src="design/images/alabs_new.png" class="logo"/></a></td>
+        <td class="logo"><a href="http://www.iis.fraunhofer.de/" target="_blank"><img src="design/images/iis.svg" class="logo" /></a></td>
+        <td class="logo"><a href="https://www.fau.eu/" target="_blank"><img src="design/images/techfak.svg" class="logo" /></a></td>
+        <td class="logo" style="vertical-align:top; padding-right:0px;"><small><strong>with modifications by</strong></small>
+        <td class="logo"><a href="https://www.bbc.co.uk/rd/" target="_blank"><img src="design/images/rd-logo-black.png" /></a></td>
+        </td>
       </tr>
     </table>
 
