added a lot of changes; not using filePlayer in OLE_multi anymore, formatted OLE_multi

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@ will be prosecuted to the maximum extent possible under law.
     <script src="lib/webmushra/datamodel/SpatialASWRating.js"></script>
     <script src="lib/webmushra/datamodel/SpatialHWDRating.js"></script>
     <script src="lib/webmushra/datamodel/SpatialLEVRating.js"></script>
+    <script src="lib/webmushra/datamodel/OLEMultiStimulusRating.js"></script>
     
     <!-- spatial -->
     <script src="lib/webmushra/spatial/Camera.js"></script>
@@ -125,6 +126,9 @@ will be prosecuted to the maximum extent possible under law.
     <script src="lib/webmushra/pages/MultipleStimulusLikertFamiliarisationPage.js"></script>
     <script src="lib/webmushra/pages/MultipleStimulusBBCSpatialFamiliarisationPage.js"></script>
     <script src="lib/webmushra/pages/SpatialPage.js"></script>
+    <script src="lib/webmushra/pages/OLEMultiStimulusPage.js"></script>
+    <script src="lib/webmushra/pages/OLECATAPage.js"></script>
+    <script src="lib/webmushra/pages/OLECATAPageManager.js"></script>
 
     <script src="lib/webmushra/nls/nls.js"></script>
     <!-- /build -->
