--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@ will be prosecuted to the maximum extent possible under law.
     <script src="lib/webmushra/misc/Shuffle.js"></script>
 
     <!-- pages -->
+    <script src="lib/webmushra/pages/canvas-controls.js"></script>
     <script src="lib/webmushra/pages/ConsentFormPage.js"></script>
     <script src="lib/webmushra/pages/BBCSpatialPage.js"></script>
+    <script src="lib/webmushra/pages/BBCSpatialReferencePage.js"></script>
     <script src="lib/webmushra/pages/BBCSpatialPageManager.js"></script>
     <script src="lib/webmushra/pages/BS1116Page.js"></script>
     <script src="lib/webmushra/pages/BS1116PageManager.js"></script>
