Saving all data and started building the full experiment (marusa_combined.yaml)

--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@ will be prosecuted to the maximum extent possible under law.
     <script src="lib/webmushra/datamodel/SpatialHWDRating.js"></script>
     <script src="lib/webmushra/datamodel/SpatialLEVRating.js"></script>
     <script src="lib/webmushra/datamodel/OLEMultiStimulusRating.js"></script>
+    <script src="lib/webmushra/datamodel/OLECATARating.js"></script>
     
     <!-- spatial -->
     <script src="lib/webmushra/spatial/Camera.js"></script>
