--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ will be prosecuted to the maximum extent possible under law.
     <!-- audio -->
     <script src="lib/webmushra/audio/AudioFileLoader.js"></script>
     <script src="lib/webmushra/audio/MushraAudioControl.js"></script>
+    <script src="lib/webmushra/audio/MusAudioControl.js"></script>
     <script src="lib/webmushra/audio/GenericAudioControl.js"></script>
 
     <!-- business -->
@@ -68,6 +69,7 @@ will be prosecuted to the maximum extent possible under law.
     <script src="lib/webmushra/business/PageTemplateRenderer.js"></script>
 
     <!-- control -->
+    <script src="lib/webmushra/control/MusAudioControlInputController.js"></script>
     <script src="lib/webmushra/control/MushraAudioControlInputController.js"></script>
     <script src="lib/webmushra/control/BS1116AudioControlInputController.js"></script>
     <script src="lib/webmushra/control/FilePlayerController.js"></script>
@@ -115,6 +117,7 @@ will be prosecuted to the maximum extent possible under law.
     <script src="lib/webmushra/pages/FinishPage.js"></script>
     <script src="lib/webmushra/pages/GenericPage.js"></script>
     <script src="lib/webmushra/pages/MushraPage.js"></script>
+    <script src="lib/webmushra/pages/MusPage.js"></script>
     <script src="lib/webmushra/pages/PairedComparisonPage.js"></script>
     <script src="lib/webmushra/pages/PairedComparisonPageManager.js"></script>
     <script src="lib/webmushra/pages/VolumePage.js"></script>
