--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ will be prosecuted to the maximum extent possible under law.
 
     <!-- datamodel -->
     <script src="lib/webmushra/datamodel/BS1116Rating.js"></script>
+    <script src="lib/webmushra/datamodel/MUSRating.js"></script>
     <script src="lib/webmushra/datamodel/MUSHRARating.js"></script>
     <script src="lib/webmushra/datamodel/LikertMultiStimulusRating.js"></script>
     <script src="lib/webmushra/datamodel/LikertSingleStimulusRating.js"></script>
